packages/openjpeg_ffi/lib/openjpeg_ffi_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Decodes a raw J2K codestream (starts FF4F = SOC marker — *not* the
/// box-structured .jp2 file format) from [data]/[length].
///
/// [reduced_resolution_factor] discards the N highest-resolution wavelet
/// levels during decode (0 = full resolution), letting a caller who only
/// needs a coarse preview skip most of the decode cost — pass 0 unless you
/// have a specific reason not to.
///
/// Blocking/synchronous: this call occupies the calling isolate for its
/// full duration. It has no main-isolate restriction (unlike dart:ui's
/// image codecs), so call it from a background isolate to keep decode work
/// off the UI thread.
@ffi.Native<
  ffi.Pointer<Jp2kDecodeResult> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
    ffi.Int32,
  )
>()
external ffi.Pointer<Jp2kDecodeResult> jp2k_decode(
  ffi.Pointer<ffi.Uint8> data,
  int length,
  int reduced_resolution_factor,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<Jp2kDecodeResult>)>()
external void jp2k_free_result(ffi.Pointer<Jp2kDecodeResult> result);

/// Result of decoding one JPEG2000 codestream. [pixels] is interleaved,
/// tightly packed, [width] * [height] * [num_components] bytes — NULL on
/// failure, in which case [error] is set instead (else NULL).
///
/// Every non-NULL result (whether it succeeded or carries an error) must be
/// passed to jp2k_free_result exactly once.
final class Jp2kDecodeResult extends ffi.Struct {
  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int num_components;

  external ffi.Pointer<ffi.Uint8> pixels;

  external ffi.Pointer<ffi.Char> error;
}
